--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,6 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  overflow-x: hidden !important;
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
   margin: 0;
@@ -53,56 +52,11 @@ body {
   );
 }
 
-/* clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%) */
-
-@keyframes marquee {
+@keyframes marquee-move-text {
   0% {
     transform: translateX(0%);
   }
   100% {
-    transform: translateX(-100%);
+    transform: translateX(-50%);
   }
-}
-
-@keyframes marquee2 {
-  0% {
-    transform: translateX(100%);
-  }
-  100% {
-    transform: translateX(0%);
-  }
-}
-
-.animate-marquee {
-  animation: marquee linear infinite;
-}
-
-.animate-marquee2 {
-  animation: marquee2 linear infinite;
-}
-
-@keyframes marquee-reverse {
-  0% {
-    transform: translateX(-100%);
-  }
-  100% {
-    transform: translateX(0%);
-  }
-}
-
-@keyframes marquee2-reverse {
-  0% {
-    transform: translateX(0%);
-  }
-  100% {
-    transform: translateX(100%);
-  }
-}
-
-.animate-marquee-reverse {
-  animation: marquee-reverse linear infinite;
-}
-
-.animate-marquee2-reverse {
-  animation: marquee2-reverse linear infinite;
 }
